# bazaar

./: .gitignore
lab/bodega/: BUILD.bazel  requirements.txt
lab/bodega/bigid_django_celery_results/: __init__.py  apps.py  models.py
lab/bodega/bodega_all/: #test_validators.py#  .#test_validators.py  __init__.py  apps.py  item_types.py  perms.py  serializers.py  signals.py  tasks.py  test_perms.py  test_signals.py  test_utils.py  test_validators.py  utils.py  validators.py  views.py
lab/bodega/bodega_aws/: models.py  tasks.py  utils.py
lab/bodega/bodega_cdm_items/: filters.py  item_managers.py  item_types.py  models.py  recipes.py  serializers.py  tasks.py  utils.py
lab/bodega/bodega_core/: __init__.py  apps.py  cleanup.py  ejection.py  exceptions.py  fields.py  filters.py  fulfillment.py  logs.py  models.py  pagination.py  tasks.py  test_ejection.py  test_fulfillment.py  test_models.py  utils.py
lab/bodega/bodega_crdb_dev_items/: cockroach-env.sh  filters.py  item_managers.py  item_types.py  models.py  recipes.py  serializers.py  tasks.py  utils.py
lab/bodega/bodega_generic_items/: filters.py  item_managers.py  item_types.py  models.py  recipes.py  serializers.py  tasks.py  utils.py
lab/bodega/bodega_kubernetes/: models.py  tasks.py  utils.py
lab/bodega/bodega_legacy_items/: apps.py  filters.py  item_managers.py  item_types.py  models.py  serializers.py  tasks.py  test_item_manager.py
lab/bodega/bodega_physical/: models.py
lab/bodega/bodega_sd_dev_items/: filters.py  item_managers.py  item_types.py  models.py  recipes.py  serializers.py  tasks.py  (+1 more)
(+248 files in other folders)
